--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,47 @@
-.wrapper {
-    background-color: lightgray;
-    padding: 15px 5px;
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Yeseva+One&display=swap');
+
+body {
+    font-family: 'Nunito Sans', sans-serif;
+    margin: 0;
 }
 
-.item {
-    margin: 5px;
-    padding: 10px;
-    background-color: blue;
+.button {
+    background: #E3B873;
+    box-shadow: 0px 5px 20px rgba(227, 184, 115, 0.1);
+    border-radius: 2px;
+    outline: 0;
+    border: 0;
+    padding: 13px 33px;
     color: white;
-    width: 50px;
-    display: inline-block;
+    text-transform: uppercase;
+
 }
 
-.item:nth-child(odd) {
-    display: none;
+.logo {
+    color: #E3B873;
+    padding-left: 92px;
+}
+
+.header {
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-navigation {
+    list-style-type: none;
+    display: flex;
+    padding-top: 37px 36px;
+}
+
+.header-navigation_item {
+    margin-right: 47px;
+    text-transform: uppercase;
+}
+
+a:link,
+:visited,
+:hover.header-navigation_link {
+    text-decoration: none;
+    color: white;
 }
