--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,12 @@ body {
     margin: 0;
 }
 
+body * {
+    box-sizing: border-box;
+}
+
 .wrapper {
-    max-width: 1250px;
+    max-width: 1440px;
     margin: 0 auto;
 }
 
@@ -59,3 +63,187 @@ a.header-navigation_link:active,
 a.header-navigation_link:hover {
     color: #E3B873;
 }
+
+.hero_color {
+    z-index: +1;
+    position: relative;
+    width: 100%;
+    height: 707px;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.container {
+    color: white;
+    font-size: 22px;
+    line-height: 163%;
+    width: 700px;
+    height: 305px;
+    padding-top: 194px;
+    padding-left: 134px;
+
+}
+
+.title {
+    margin: 0;
+    font-family: 'Yeseva One', 'Times New Roman', Times, serif;
+    font-size: 40px;
+    line-height: 132%;
+    text-transform: uppercase;
+    padding-bottom: 19px;
+}
+
+.gold_title {
+    color: #E3B873;
+}
+
+.header_buttom {
+    display: flex;
+}
+
+.button_he {
+    background: rgba(0, 0, 0, 0);
+    border: 1px solid #FFFFFF;
+    margin-left: 20px;
+}
+
+.container_black {
+    background-color: black;
+    width: 100%;
+    height: 1074px;
+    margin-top: 0px;
+}
+
+.title_black {
+    width: 1171px;
+    color: white;
+    font-size: 14px;
+    padding-top: 111px;
+    line-height: 163%;
+}
+
+.navigation_black {
+    justify-content: right;
+
+}
+
+a.navigation_black_link {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    padding-right: 60px;
+    margin: 0;
+    font-family: 'Yeseva One', 'Times New Roman', Times, serif;
+    font-size: 14px;
+
+}
+
+a.navigation_black_link:active,
+a.navigation_black_link:hover {
+    color: #E3B873;
+    text-decoration: underline;
+}
+
+.title_black_left {
+    font-family: 'Yeseva One', 'Times New Roman', Times, serif;
+    font-size: 27px;
+    text-transform: uppercase;
+    color: #E3B873;
+}
+
+.left_nav {
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 442px;
+}
+
+.blok_left {
+    margin-top: 50px;
+    margin-right: 20px;
+    width: 161px;
+    height: 73px;
+}
+
+.black_left {
+    font-family: 'Yeseva One', 'Times New Roman', Times, serif;
+    font-size: 18px;
+    text-transform: uppercase;
+    color: #E3B873;
+
+}
+
+.raz img {
+    float: right;
+}
+
+.text_black {
+    padding-top: 17px;
+}
+
+.arrow_box {
+    width: 52px;
+    height: 14px;
+}
+
+.arrow_box_right {
+    width: 52px;
+    height: 14px;
+    display: flex;
+    justify-content: right;
+
+}
+
+.arrow_box_big {
+    width: 206px;
+    height: 14px;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 40px;
+}
+
+
+.arrow {
+    width: 10px;
+    height: 10px;
+    border-top: 1px solid #fff;
+    border-right: 1px solid #fff;
+    position: absolute;
+}
+
+.arrow-left {
+    transform: rotate(-135deg);
+}
+
+.arrow-right {
+    transform: rotate(45deg);
+}
+
+.sq {
+    width: 36px;
+    height: 1.5px;
+    border-top: 1px solid #fff;
+    margin-top: 5px;
+    position: absolute;
+}
+
+
+.w {
+    color: #fff;
+}
+
+.gold {
+    color: #E3B873;
+}
+
+.circle {
+    background: #fff;
+    border-radius: 50%;
+    height: 9px;
+    width: 9px;
+    opacity: 50%;
+}
+
+.circle:hover {
+    opacity: 100%;
+}
+
+.block_video {}
