--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,7 @@ a.navigation_black_link:hover {
 
 
 .block_form {
-    width: 817px;
+    width: 617px;
     height: 515px;
     margin-left: auto;
     margin-right: auto;
@@ -326,4 +326,65 @@ a.navigation_black_link:hover {
     text-align: center;
     font-size: 18px;
     line-height: 168%;
+}
+
+.container_form {
+    display: flex;
+    font-size: 13px;
+    color: #9b9b9b;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.container_lable {
+    width: 100px;
+    text-align: left;
+}
+
+
+input[type=text],
+input[type=phone] {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    font-size: 14px;
+    border-bottom: 1px solid #9b9b9b;
+
+}
+
+.gold_chek>input {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+
+/* для элемента label, связанного с .custom-checkbox */
+.gold_chek>span {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+    font-size: 13px;
+}
+
+/* создание в label псевдоэлемента before со следующими стилями */
+.gold_chek>span::before {
+    content: '';
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 1px solid #E3B873;
+    background-color: #E3B873;
+    border-radius: 0.25em;
+    margin-right: 0.5em;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+}
+
+.gold_chek>input:checked+span::before {
+    border-color: #E3B873;
+    background-color: #E3B873;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
 }
